Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131731

REG: Possible crash on macOS when disabling emoji parsing

    XMLWordPrintable

Details

    • macOS
    • 40e364172 (dev), f2b7d064b (6.8), 794af7953 (tqtc/lts-6.5)

    Description

      To reproduce, set the environment variable QT_DISABLE_EMOJI_SEGMENTER=1 and run tests/manual/emojisequences

      Scroll down, at some point it will assert in qtextlayout.cpp.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes